// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createBuiltInRoomListeners should have correct segments for join 1`] = `
[
  {
    "type": "literal",
    "value": "rooms",
  },
  {
    "type": "param",
    "value": "roomId",
  },
  {
    "type": "literal",
    "value": "join",
  },
]
`;

exports[`createBuiltInRoomListeners should have correct segments for leave 1`] = `
[
  {
    "type": "literal",
    "value": "rooms",
  },
  {
    "type": "param",
    "value": "roomId",
  },
  {
    "type": "literal",
    "value": "leave",
  },
]
`;
